--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link rel="stylesheet" type="text/css" href="style/style.css" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/style.csss" />
 </head>
 
 <body>
@@ -15,14 +16,14 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">shadow<span class="logo_colour">play_2</span></a></h1>
+          <h1><a href="default.html">shadow<span class="logo_colour">play_2</span></a></h1>
           <h2>Simple. Contemporary. Website Template.</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="index.html">Home</a></li>
+          <li class="selected"><a href="default.html">Home</a></li>
           <li><a href="examples.html">Examples</a></li>
           <li><a href="page.html">A Page</a></li>
           <li><a href="another_page.html">Another Page</a></li>
@@ -72,8 +73,8 @@
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="index.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a></p>
-      <p>Copyright &copy; shadowplay_2 | <a href="http://www.cssmoban.com/cssthemes/html5moban/">HTML5 模板</a> | <a href="#">CSS</a> | <a href="http://www.cssmoban.com/">模板之家</a></p>
+      <p><a href="default.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a></p>
+      <p>Copyright &copy; shadowplay_2 | <a href="http://www.cssmoban.com/cssthemes/html5moban/">HTML5 模板</a> | <a href="#">CSS</a> | <a href="https://cnhubin.github.io/huyingzi.github.io/">CNHubin个人网站</a></p>
     </div>
   </div>
 </body>
