--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,11 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <!-- 
   <link rel="stylesheet" type="text/css" href="../assets/css/style.csss" />
-  <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/style.css" /> -->
+  <link href='{{ site.url }}/stylesheets/style.css' rel='stylesheet' type='text/css' />
+
 </head>
 
 <body>
