测试自动跳转

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,16 @@
   <link rel="stylesheet" type="text/css" href="../assets/css/style.css" /> -->
   <link href='{{ site.url }}/stylesheets/style.css' rel='stylesheet' type='text/css' />
 
+  <script type="text/javascript">
+      onload=function(){     <span style="white-space:pre">       </span>//在进入网页的时候加载该方法
+        setTimeout(go, 3000); <span style="white-space:pre">  </span> /*在js中是ms的单位*/
+      };
+      function go(){
+        location.href="https://help.github.com/articles/customizing-css-and-html-in-your-jekyll-theme/"; 
+      }
+  </script>
+
+
 </head>
 
 <body>
