--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,94 +1,11 @@
-<!DOCTYPE HTML>
-<html>
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>shadowplay_2</title>
-  <meta name="description" content="website description" />
-  <meta name="keywords" content="website keywords, website keywords" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <!-- 
-  <link rel="stylesheet" type="text/css" href="../assets/css/style.csss" />
-  <link rel="stylesheet" type="text/css" href="../assets/css/style.css" /> -->
-  <link href='{{ site.url }}/stylesheets/style.css' rel='stylesheet' type='text/css' />
-
-  <script type="text/javascript">
-      onload=function(){     <span style="white-space:pre">       </span>//在进入网页的时候加载该方法
-        setTimeout(go, 3000); <span style="white-space:pre">  </span> /*在js中是ms的单位*/
-      };
-      function go(){
-        location.href="https://help.github.com/articles/customizing-css-and-html-in-your-jekyll-theme/"; 
-      }
-  </script>
-
-
+    <meta charset="UTF-8">
+    <title>胡英姿</title>
+    <!-- 以下方式定时转到其他页面 -->
+    <meta http-equiv="refresh" content="5;url=https://www.baidu.com/index.html"> 
 </head>
-
 <body>
-  <div id="main">
-    <div id="header">
-      <div id="logo">
-        <div id="logo_text">
-          <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="default.html">shadow<span class="logo_colour">play_2</span></a></h1>
-          <h2>Simple. Contemporary. Website Template.</h2>
-        </div>
-      </div>
-      <div id="menubar">
-        <ul id="menu">
-          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="default.html">Home</a></li>
-          <li><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </div>
-    <div id="content_header"></div>
-    <div id="site_content">
-      <div class="sidebar">
-        <!-- insert your sidebar items here -->
-        <h3>Latest News</h3>
-        <h5>January 1st, 2011</h5>
-        <p>2011 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h5>January 1st, 2011</h5>
-        <p>2011 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h3>Useful Links</h3>
-        <ul>
-          <li><a href="#">link 1</a></li>
-          <li><a href="#">link 2</a></li>
-          <li><a href="#">link 3</a></li>
-          <li><a href="#">link 4</a></li>
-        </ul>
-        <h3>Search</h3>
-        <form method="post" action="#" id="search_form">
-          <p>
-            <input class="search" type="text" name="search_field" value="Enter keywords....." />
-            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
-          </p>
-        </form>
-      </div>
-      <div id="content">
-        <!-- insert the page content here -->
-        <h1>Welcome to the shadowplay_2 template</h1>
-        <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under a Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). All I ask is that you leave the 'Collect from cssmoban.com' link in the footer of the template, but other than that...</p>
-        <p>This template is written entirely in <strong>HTML5</strong> and <strong>CSS</strong>, and can be validated using the links in the footer.</p>
-        <p>You can view more free HTML5 web templates <a href="http://www.cssmoban.com/">模板</a>.</p>
-        <p>This template is a fully functional 5 page website, with an <a href="examples.html">examples</a> page that gives examples of all the styles available with this design.</p>
-        <h2>Browser Compatibility</h2>
-        <p>This template has been tested in the following browsers:</p>
-        <ul>
-          <li>Internet Explorer 8</li>
-          <li>FireFox 3.5</li>
-          <li>Google Chrome 13</li>
-        </ul>
-      </div>
-    </div>
-    <div id="content_footer"></div>
-    <div id="footer">
-      <p><a href="default.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a></p>
-      <p>Copyright &copy; shadowplay_2 | <a href="http://www.cssmoban.com/cssthemes/html5moban/">HTML5 模板</a> | <a href="#">CSS</a> | <a href="https://cnhubin.github.io/huyingzi.github.io/">CNHubin个人网站</a></p>
-    </div>
-  </div>
-</body>
 </html>
