--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>胡英姿</title>
     <!-- 以下方式定时转到其他页面 -->
-    <meta http-equiv="refresh" content="5;url=https://www.baidu.com/index.html"> 
+    <meta http-equiv="refresh" content="0;url=https://cnhubin.github.io/huyingzi.github.io/blog/index.html"> 
 </head>
 <body>
 </html>
