--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>胡英姿</title>
+    <title>定向中...</title>
     <!-- 以下方式定时转到其他页面 -->
     <meta http-equiv="refresh" content="0;url=https://cnhubin.github.io/huyingzi.github.io/blog/index.html"> 
 </head>
